--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -67,7 +67,8 @@
         <activity-alias
             android:name="${applicationId}.MainActivityBlackOnGold"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_black_on_gold_foreground"
+            android:icon="@mipmap/ic_black_on_gold"
+            android:roundIcon="@mipmap/ic_black_on_gold_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -79,7 +80,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityFlatBlue"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_flat_blue_foreground"
+            android:roundIcon="@mipmap/ic_flat_blue_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -91,7 +92,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityFlatPink"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_flat_pink_foreground"
+            android:roundIcon="@mipmap/ic_flat_pink_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -103,7 +104,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityFlatPurple"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_flat_purple_foreground"
+            android:roundIcon="@mipmap/ic_flat_purple_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -115,7 +116,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityFlatYellow"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_flat_yellow_foreground"
+            android:roundIcon="@mipmap/ic_flat_yellow_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -127,7 +128,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityFlowersAutumn"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_flowers_autumn_foreground"
+            android:roundIcon="@mipmap/ic_flowers_autumn_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -139,7 +140,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityFlowersBeige"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_flowers_beige_foreground"
+            android:roundIcon="@mipmap/ic_flowers_beige_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -151,7 +152,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityFlowersMagenta"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_flowers_magenta_foreground"
+            android:roundIcon="@mipmap/ic_flowers_magenta_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -163,7 +164,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityFlowersPink"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_flowers_pink_foreground"
+            android:roundIcon="@mipmap/ic_flowers_pink_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -175,7 +176,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityGemBgCandy"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_gem_bg_candy_foreground"
+            android:roundIcon="@mipmap/ic_gem_bg_candy_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -187,7 +188,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityGemBgMono"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_gem_bg_mono_foreground"
+            android:roundIcon="@mipmap/ic_gem_bg_mono_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -199,7 +200,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityGemBgMulti"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_gem_bg_multi_foreground"
+            android:roundIcon="@mipmap/ic_gem_bg_multi_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -211,7 +212,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityGemBgPink"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_gem_bg_pink_foreground"
+            android:roundIcon="@mipmap/ic_gem_bg_pink_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -223,7 +224,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityGoldOnBlack"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_gold_on_black_foreground"
+            android:roundIcon="@mipmap/ic_gold_on_black_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -235,7 +236,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityGoldOnBlackOutline"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_gold_on_black_outline_foreground"
+            android:roundIcon="@mipmap/ic_gold_on_black_outline_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -260,6 +261,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityLightHearts"
             android:targetActivity=".MainActivity"
+            android:roundIcon="@mipmap/ic_light_hearts_foreground"
             android:icon="@mipmap/ic_light_hearts_foreground"
             android:label="@string/app_name"
             android:enabled="false"
@@ -272,7 +274,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityNeonBlue"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_neon_blue_foreground"
+            android:roundIcon="@mipmap/ic_neon_blue_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -284,7 +286,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityNeonGreen"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_neon_green_foreground"
+            android:roundIcon="@mipmap/ic_neon_green_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -296,7 +298,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityNeonPink"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_neon_pink_foreground"
+            android:roundIcon="@mipmap/ic_neon_pink_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -308,7 +310,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityNeonYellow"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_neon_yellow_foreground"
+            android:roundIcon="@mipmap/ic_neon_yellow_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -320,7 +322,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityNotebook"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_notebook_foreground"
+            android:roundIcon="@mipmap/ic_notebook_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -332,7 +334,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityPastel3dGold"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_pastel_3d_gold_foreground"
+            android:roundIcon="@mipmap/ic_pastel_3d_gold_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -344,7 +346,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityPastel3dGreen"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_pastel_3d_green_foreground"
+            android:roundIcon="@mipmap/ic_pastel_3d_green_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -356,7 +358,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityPastel3dPink"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_pastel_3d_pink_foreground"
+            android:roundIcon="@mipmap/ic_pastel_3d_pink_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -368,7 +370,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityPastelIcPastel3dBlue"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_pastel_ic_pastel_3d_blue"
+            android:roundIcon="@mipmap/ic_pastel_ic_pastel_3d_blue"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -380,7 +382,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityPendant"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_pendant_foreground"
+            android:roundIcon="@mipmap/ic_pendant_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -392,7 +394,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityPhotosHeartsBlack"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_photos_hearts_black_foreground"
+            android:roundIcon="@mipmap/ic_photos_hearts_black_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -404,7 +406,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityPhotosHearts"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_photos_hearts_foreground"
+            android:roundIcon="@mipmap/ic_photos_hearts_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -416,7 +418,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityTunnel"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_tunnel_foreground"
+            android:roundIcon="@mipmap/ic_tunnel_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -428,7 +430,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityWavesBlack"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_waves_black_foreground"
+            android:roundIcon="@mipmap/ic_waves_black_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -440,7 +442,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityWavesBlue"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_waves_blue_foreground"
+            android:roundIcon="@mipmap/ic_waves_blue_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -452,7 +454,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityWavesGold"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_waves_gold_foreground"
+            android:roundIcon="@mipmap/ic_waves_gold_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -464,7 +466,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityWavesPurple"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/ic_waves_purple_foreground"
+            android:roundIcon="@mipmap/ic_waves_purple_foreground"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
@@ -476,7 +478,7 @@
         <activity-alias
             android:name="${applicationId}.MainActivityLauncherIcon"
             android:targetActivity=".MainActivity"
-            android:icon="@mipmap/launcher_icon"
+            android:roundIcon="@mipmap/launcher_icon"
             android:label="@string/app_name"
             android:enabled="false"
             android:exported="true">
